# dbcompass

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  cliff.toml  release.toml  slintcn.json
.github/workflows/: ci.yml  mcp-release.yml  release.yml  version-bump.yml
plugin-interface/: Cargo.toml
plugin-interface/src/: database.rs  lib.rs  types.rs
plugins/hello-plugin/src/: lib.rs
plugins/mysql-plugin/: Cargo.toml
plugins/mysql-plugin/src/: lib.rs
plugins/postgres-plugin/: Cargo.toml
plugins/postgres-plugin/src/: lib.rs
plugins/sqlite-plugin/: Cargo.toml
plugins/sqlite-plugin/src/: lib.rs
src/: app.rs  bridge.rs  connection_manager.rs  main.rs  plugin_manager.rs  query_executor.rs  sql_completion.rs
src/models/: query_result.rs
ui/: app.slint  connection-form-dialog.slint  connection-tree.slint  data-grid.slint  query-editor.slint  status-bar.slint
ui/slintcn/components/: table.slint
