[workspace]
members = [
    "plugin-interface",
    "plugins/hello-plugin",
    "plugins/sqlite-plugin",
    "plugins/mysql-plugin",
    "plugins/postgres-plugin",
]

[package]
name = "dbcompass"
version = "0.1.2"
edition = "2024"

[dependencies]
slint = "1.17.1"
libloading = "0.8"
plugin-interface = { path = "plugin-interface", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
directories = "6"
rfd = "0.15"
csv = "1.3"
chrono = "0.4"

[build-dependencies]
slint-build = "1.17.1"
